--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "map-filter-reduce-exercises",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Let's practice using `map`, `filter`, and `reduce`!",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "ava --verbose"
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,6 @@
     "mocha": "^2.5.3"
   },
   "dependencies": {
-    "tap": "^6.2.0"
+    "ava": "^0.22.0"
   }
 }
